fixed up comment text overflowing

--- a/frontend/src/components/Comments/Comments.module.css
+++ b/frontend/src/components/Comments/Comments.module.css
@@ -11,6 +11,7 @@
 
 .commentLi{
     border-top: 2px solid #f5c1c1;
+    overflow-wrap: break-word;
     font-family: 'Urbanist', sans-serif;
 }
 
